# yin_resume_api/controllers/resume_controller.py
@@ -6,6 +6,7 @@ from typing import Union
 from yin_resume_api.models.desc import Desc  # noqa: E501
 from yin_resume_api.models.education import Education  # noqa: E501
 from yin_resume_api.models.skill import Skill  # noqa: E501
+from yin_resume_api.models.social_network import SocialNetwork  # noqa: E501
 from yin_resume_api.models.work import Work  # noqa: E501
 from yin_resume_api import util
 
@@ -71,3 +72,17 @@ def get_skills(name_id=None):  # noqa: E501
         return bl_get_all_skills(name_id=name_id)
     return bl_get_all_skills()
 
+
+def get_social_networks(name_id=None):  # noqa: E501
+    """Find person description by ID
+
+    Get all work info for a person by ID # noqa: E501
+
+    :param name_id: ID of the person
+    :type name_id: str
+
+    :rtype: Union[Work, Tuple[Work, int], Tuple[Work, int, Dict[str, str]]
+    """
+    if name_id:
+        return bl_get_all_social_networks(name_id=name_id)
+    return bl_get_all_social_networks()
