# yin_resume_api/models/__init__.py
@@ -4,4 +4,5 @@ from yin_resume_api.models.desc import Desc
 from yin_resume_api.models.education import Education
 from yin_resume_api.models.project import Project
 from yin_resume_api.models.skill import Skill
+from yin_resume_api.models.social_network import SocialNetwork
 from yin_resume_api.models.work import Work
